Make the photos reasonable sized.

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
           <small>Saturday, April 18th, 2020</small>
         </h1>
         <p>
-          UF Innovate | The Hub - 747 SW 2nd Ave, Gainesville, FL 32601. 
+          UF Innovate | The Hub - 747 SW 2nd Ave, Gainesville, FL 32601.
         </p>
         <div class="photo--hero">
           <div class="photo-themes">
@@ -398,8 +398,8 @@
       <div class="our-sessions">
 				<h2>Session</h2>
 				<!-- <p>
-					Check out our featured sessions, and draw inspiration 
-					for your own talk! Remember, sessions aren't limited to just "talks," 
+					Check out our featured sessions, and draw inspiration
+					for your own talk! Remember, sessions aren't limited to just "talks,"
 					it can be a presentation, panel, or discussion group.
         </p> -->
         <p>
@@ -408,11 +408,11 @@
 				<div class="row">
 					<!-- Left -->
 					<div class="column">
-       
+
 					</div>
 					<!-- Right -->
 					<div class="column">
-	
+
 					</div>
 				</div>
       </div>
@@ -440,7 +440,7 @@
           </li>
           <li>
             <a href="https://opiesoftware.com/" target="_blank">
-              <img src="assets/images/opie-logo.png" alt="OPIE Software" class="tall">
+              <img src="assets/images/opie-logo.jpg" alt="OPIE Software" class="tall">
             </a>
           </li>
           <li>
@@ -499,7 +499,7 @@
         body.classList = ""
         body.classList.add(theme);
         var metaThemeColor = document.querySelector("meta[name=theme-color]");
-        
+
         switch(theme) {
           case "cotton-candy":
             metaThemeColor.setAttribute("content", '#00dbde');
