Removing registration from HTML.

--- a/src/index.html
+++ b/src/index.html
@@ -118,8 +118,7 @@
         </p>
         <p>
           As an ice breaker, we’ll seed the schedule with 5 - 10 featured
-          sessions, just to get the ball rolling. Interested in being a
-          featured speaker? <a href="https://www.eventbrite.com/e/gainesville-barcamp-2019-tickets-56538256447">Register</a> and select, speaker ticket.
+          sessions, just to get the ball rolling.
         </p>
       </div>
       <div class="frequently-asked-question">
