--- a/src/index.html
+++ b/src/index.html
@@ -52,7 +52,7 @@
           <p>
             UF Innovate | The Hub - 747 SW 2nd Ave, Gainesville, FL 32601. 
           </p>
-          <a class="btn" href="https://www.eventbrite.com/e/barcamp-gnv-2020-tickets-93831786399">Register now</a>
+          <a class="btn" href="https://barcamp-gnv-2020.eventbrite.com">Register now</a>
         </div>
         <div class="col-right">
           <div class="photo--hero">
@@ -127,7 +127,7 @@
         <p>
           As an ice breaker, we’ll seed the schedule with 5 - 10 featured
           sessions, just to get the ball rolling. Interested in being a
-          featured speaker? <a href="https://www.eventbrite.com/e/gainesville-barcamp-2019-tickets-56538256447">Register</a> and select, speaker ticket.
+          featured speaker? <a href="mailto:gainesvillebarcamp@gmail.com?subject=Featured%20speaker%20request">Let us know</a>.
         </p>
       </div>
     </section>
