Added Three Five Two, to sponsors section.

--- a/src/index.html
+++ b/src/index.html
@@ -452,6 +452,11 @@
             </a>
           </li>
           <li>
+            <a href="https://www.threefivetwo.com/" target="_blank">
+              <img src="assets/images/352.svg" alt="Three Five Two">
+            </a>
+          </li>
+          <li>
             <a href="https://startupgnv.com/" target="_blank">
               <img src="assets/images/startup-GNV-logo.png" alt="startupGNV">
             </a>
