Fix for our tracks theme bug

--- a/src/index.html
+++ b/src/index.html
@@ -452,7 +452,7 @@
             </a>
           </li>
           <li>
-            <a href="https://www.threefivetwo.com/" target="_blank">
+            <a href="https://www.threefivetwo.com/ƒ" target="_blank">
               <img src="assets/images/352.svg" alt="Three Five Two">
             </a>
           </li>
