Fixing invalid link to three five two.

--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,7 @@
             <small>Saturday, April 18th, 2020</small>
           </h1>
           <p>
-            UF Innovate | The Hub - 747 SW 2nd Ave, Gainesville, FL 32601. 
+            UF Innovate | The Hub - 747 SW 2nd Ave, Gainesville, FL 32601.
           </p>
           <a class="btn" href="https://barcamp-gnv-2020.eventbrite.com">Register now</a>
         </div>
@@ -83,7 +83,7 @@
             <span class="sunset"></span>
             <span class="mist"></span>
             <img src="assets/images/photo-002.jpg" alt="Talk: Upcycled Percussion">
-          </div> 
+          </div>
         </div>
       </div>
       <div class="col-right">
@@ -434,8 +434,8 @@
               Fish Costumes and Other Bad Ideas: Solution-Focused Thinking
             </h4>
             <p>
-              Become a better thinker by unleashing the creative capacity of your brain. Learn to be solution-focused by embracing your bad ideas, 
-              cultivating your slightly better ideas and harvesting good ideas. Discover how you and your team can unlock solutions by 
+              Become a better thinker by unleashing the creative capacity of your brain. Learn to be solution-focused by embracing your bad ideas,
+              cultivating your slightly better ideas and harvesting good ideas. Discover how you and your team can unlock solutions by
               intentionally committing to think differently and collectively.
             </p>
           </section>
@@ -473,7 +473,7 @@
             </a>
           </li>
           <li>
-            <a href="https://www.threefivetwo.com/ƒ" target="_blank">
+            <a href="https://www.threefivetwo.com" target="_blank">
               <img src="assets/images/352.svg" alt="Three Five Two">
             </a>
           </li>
@@ -532,7 +532,7 @@
         body.classList = ""
         body.classList.add(theme);
         var metaThemeColor = document.querySelector("meta[name=theme-color]");
-        
+
         switch(theme) {
           case "cotton-candy":
             metaThemeColor.setAttribute("content", '#00dbde');
