WATT and Dev and UX featured sessions.

--- a/src/index.html
+++ b/src/index.html
@@ -440,6 +440,28 @@
             </p>
           </section>
         </div>
+        <div class="session session--watt">
+          <div class="session_vr">
+            <div class="photo-themes">
+              <span class="teen-party"></span>
+              <span class="cotton-candy"></span>
+              <span class="sunset"></span>
+              <span class="mist"></span>
+            </div>
+          </div>
+          <section class="session_content">
+            <i>Technology</i>
+            <h4>
+              <small>WATT organizers</small>
+              WATT - A Year in Review
+            </h4>
+            <p>
+              Since our announcement of starting a new community at BarCamp 2019, we've 
+              learned a lot about diversity in tech and perceptions in the "pipeline". 
+              We'll review our findings and community resources, and discuss what's next.
+            </p>
+          </section>
+        </div>
       </div>
       <div class="col-right">
         <div class="session session--derek">
@@ -461,6 +483,28 @@
               There is self-evident value to being flexible when building companies and products. However, when it comes to cloud architecture 
               folks get extremely risk averse. That aversion is completely understandable and almost entirely unhelpful in this era. 
               This talk will go over vendor lock-in, overspending, writing crap code, and why I champion all three.
+            </p>
+          </section>
+        </div>
+        <div class="session session--michelle-peter">
+          <div class="session_vr">
+            <div class="photo-themes">
+              <span class="teen-party"></span>
+              <span class="cotton-candy"></span>
+              <span class="sunset"></span>
+              <span class="mist"></span>
+            </div>
+          </div>
+          <section class="session_content">
+            <i>Creative/Technology</i>
+            <h4>
+              <small>Michelle Brownstein & Peter Brownstein</small>
+              Dev and UX research: no longer an odd couple 
+            </h4>
+            <p>
+              UX research isn't just for designers. 
+              We will discuss how developers can contribute and receive value by 
+              participating in the UX Research process, and methods for getting involved.
             </p>
           </section>
         </div>
@@ -541,7 +585,7 @@
         </ul>
         <p>
           © 2019 BarCamp GNV.
-          Please see our <a href="https://docs.google.com/document/d/1iapQQQDFbCJYkFE-RAnpqgp3rvUUM-cZtT8_6Y8OAoU/edit?usp=sharing" target="_blank">Code of Conduct</a>.<br>
+          Please see our <a href="https://docs.google.com/document/d/1xh9A1xKLi_HW37kVkxP4516VoqoE-F6emKQtLnLIqTg/edit?usp=sharing" target="_blank">Code of Conduct</a>.<br>
           <a href="mailto:gainesvillebarcamp@gmail.com">Contact Us</a> if you want to hang out sometime.
           Checkout the 2019 site <a target="_blank" href="http://2019.gainesvillebarcamp.com">here</a>.
         </p>
